# RescueCLIP

./: .editorconfig  .env.template  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  weaviate_up.sh  weaviate_up_down.sh
scripts/: graphing.ipynb  open_clip_smoke_test.py  scratch.py
scripts/clip_encoding_performance/: clip_embed_images_experiment.csv  clip_embed_images_experiment.py  clip_embed_images_experiment_LENNIE_Apple_Model.csv  clip_embed_images_experiment_MBP_Apple_Model.csv  graph.py
scripts/cuhk_embeddings/: cuhk_stops.txt  cuhk_vector_distribution.ipynb  cuhk_vector_distribution_direct_pairwise.ipynb  embed_cuhk.py  exclude_one_image_per_set.py  exclude_one_image_per_set_exp.py  exclude_one_image_per_set_exp_6288_images.csv  exclude_one_image_per_set_exp_results.csv  parse_cuhk_pedes.py  query_cuhk.py  threshold_test.ipynb  threshold_test.py  threshold_test_simpler.ipynb
scripts/gen_CUKH_embeddings/: cuhk_stops.txt  embed_cuhk.py  query_cuhk.py
scripts/gen_cuhk_embeddings/: embed_cuhk.py  parse_cuhk_pedes.py
scripts/pdna/: pdna_experiment.py
scripts/weaviate-health/: weaviate_single_vector_insertion_test.py
scripts/weaviate_health/: weaviate_single_vector_insertion_test.py
src/rescueclip/: cuhk.py  logging_config.py  ml_model.py  open_clip.py  open_clip_smoke_test.py  sqlite_db.py  weaviate.py
